--- a/ansible-createuser-withpassword.yml
+++ b/ansible-createuser-withpassword.yml
@@ -14,7 +14,13 @@
       dest: /etc/sudoers.d/ansible
       content: 'ansible ALL=(ALL) NOPASSWD: ALL' 
       validate: /usr/sbin/visudo -cf %s
-  -  name: Disable Password Authentication
+  - name: Deploy Local User SSH Key
+    authorized_key:
+      user: ansible
+      state: present
+      manage_dir: true
+      key: "{{ lookup('file', '/home/ansible/.ssh/id_rsa.pub') }}"
+  -  name: enable Password Authentication
      lineinfile:
         dest=/etc/ssh/sshd_config
         regexp='^PasswordAuthentication'
